# CI-CD-Pipeline-for-MLOPs

./: Makefile  README.md  STEP_BY_STEP_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: config.yaml  model_config.yaml
docker/: Dockerfile  docker_compose.yml
scripts/: download_data.sh
src/api/: main.py  schemas.py
src/data/: ingestion.py  preprocessing.py
src/models/: train.py
tests/: test_api.py  test_basic.py
