[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = "MLOps project with FastAPI backend, data processing, and model training"
authors = ["agasthyarkumar"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.26.0,<2.0.0"
pandas = ">=1.5.0,<3.0.0"
scikit-learn = ">=1.3.0,<2.0.0"
mlflow = ">=2.8.1,<3.0.0"
fastapi = ">=0.104.1"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic = ">=2.5.0"
pytest = ">=7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"